--- a/tanguy-morvan/src/app/globals.css
+++ b/tanguy-morvan/src/app/globals.css
@@ -17,5 +17,9 @@
 body {
   color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  /* font-family: var(--font-antiquelegacy); */
+}
+
+h1 {
+  font-family: var(--font-ktfrublenatrial);
 }
